--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body{
+  background: rgb(155, 89, 182) ;
+ 
+}
 .App {
   text-align: center;
 }
@@ -6,6 +10,178 @@
   height: 40vmin;
   pointer-events: none;
 }
+.title{
+  font-size: 40px;
+  color: #ffffff;
+  cursor: none;
+  display: absolute;
+  margin-top: 20px;
+  animation: skip2 3s 1;
+  text-transform: uppercase;
+  font-family: cursive;
+}
+.checkbox{
+  visibility: hidden;
+}
+
+.button-add{
+  position: fixed;
+  bottom: 0;
+  font-size: 15px;
+  right: 0;
+  margin: 25px;
+  margin-right: 33px;
+  color: #ffffff;
+  background: blue;
+  border-radius: 20px;
+  cursor: pointer;
+  padding: 15px;
+  border: 0;
+  transition: 1000ms;
+ 
+  
+}
+.button-add:hover{
+  background: #ffffff;
+  color: blue;
+
+}
+
+
+.users-list{
+  display: flex;
+  flex-direction: column;
+  animation: skip2 3s 1;
+  
+}
+@keyframes skip2{
+  from{
+    transform:translatex(-900px);
+  }
+  to{
+    transform:translatex(0);
+  }
+}
+.rectangle button{
+  position: relative;
+  bottom: 65px;
+  left: 85%;
+  
+ 
+}
+
+
+.rectangle{
+  
+  width: 60%;  
+  padding: 0 40px;
+  
+  background: #FFFFFF;
+  border: 1px solid #E5E5E5;
+  box-sizing: border-box;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  text-align: start;
+  margin: 30px auto;
+
+}
+.container-form{
+  text-align: start;
+  background: #ffffff;
+  width: 40%;
+  
+  padding: 2%;
+  margin:0 auto;
+  position: relative;
+  margin-top: 13%;
+  border-radius: 15px;
+  animation: skip 3s 1;
+  transform:translatey(0);
+  
+}
+@keyframes skip{
+  from{
+    transform:translatey(-500px);
+  }
+  to{
+    transform:translatey(0);
+  }
+}
+.button-edit{
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  padding: 6px;
+  color: red;
+}
+.button-edit:hover{
+  color: #ffffff;
+  background: red;
+  border-radius: 8px;
+  
+}
+ 
+.button-delete{
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  color: black;
+  padding: 6px;
+  
+}
+.button-delete:hover{
+  color: #ffffff;
+  background: black;
+  border-radius: 8px;
+}
+.input-name{
+ padding: 10px;
+ 
+}
+.input-name label{
+  padding: 13px;
+}
+.input-name input{
+  width: 41%;
+  margin: 0 2px;
+  border-radius: 6px;
+  background: #E5E5E5;
+  height: 30px;
+}
+.input-form{
+  padding: 10px;
+ 
+ 
+}
+.input-form input{
+  width: 85%;
+  border-radius: 6px;
+  background: #E5E5E5;
+  height: 30px;
+}
+.input-form label{
+ padding: 13px;
+ 
+}
+
+.container-form button{
+ width: 100%;
+ height: 34px;
+ background: transparent;
+ cursor: pointer;
+ border-radius: 4px;
+}
+.button-submit:hover{
+ background: #9ccf61;
+ color: #ffffff;
+ transition: 1s;
+}
+.button-cancel:hover{
+  background: red;
+  color: #ffffff;
+  transition: 1s;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
